Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 </div>
 
 <!-- fourth part -->
+<!-- fourth part -->
  
 <section style="background-color: rgb(232, 221, 221);">
 
@@ -421,5 +422,6 @@ footer {
     
 </body>
 </html> 
+
 
 
