--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
     <div class="fifthdiv">
         <img src="krishnaastami.png" alt="durgamaa" class="durga" >
-        <h2 style="text-align: center; color: #ad1111">Bala Krishna Idol</h2>
+        <h2 style="text-align: center; color: #ad1111">Little Krishna Idol</h2>
     </div>
 </div>
 
@@ -422,6 +422,7 @@ footer {
     
 </body>
 </html> 
+
 
 
 
