--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <h1>
         Welcome to Amnaya
     </h1>
-    <p class="intro">An E-commerce application for all your pooja needs</p>
-    <button class="button-17" role="button" style="margin-left: 70%;">Shop now</button>
+    <p class="intro">An E-commerce application for all your pooja needsm</p>
+    <button class="button-17" role="button" style="margin-left: 70%;"> Shop now </button>
 
 </div>
 <!-- third part -->
@@ -422,6 +422,7 @@ footer {
     
 </body>
 </html> 
+
 
 
 
