--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="secpart" style="background-color: #FFF">
     
     <h1>
-        Welcome to Amnaya
+        Welcome to Amnaya,
     </h1>
     <p class="intro">An E-commerce application for all your pooja needsm</p>
     <button class="button-17" role="button" style="margin-left: 70%;"> Shop now </button>
@@ -422,6 +422,7 @@ footer {
     
 </body>
 </html> 
+
 
 
 
