--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="para">
         <h2 style="color: black; font-size: xx-large;">Amnaya......</h2>
         <p class="amnayap" style=" font-size: x-large; letter-spacing: 1px;">
-            Your one-stop shop for all pooja items and festival essentials. At <b>Amnaya</b>, we understand the importance of tradition and spirituality in your life by delevering happiness to your doorstep.
+            Your one stop shop for all pooja items and festival essentials. At <b>Amnaya</b>, we understand the importance of tradition and spirituality in your life by delevering happiness to your doorstep.
         </p>
     </div>
     <div class="durgaimg">
@@ -422,6 +422,7 @@ footer {
     
 </body>
 </html> 
+
 
 
 
