--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- third part -->
 <div class="thirdpart" style="background-color: #f6f2f2;">
     <div class="para">
-        <h2 style="color: black; font-size: xx-large;">Amnaya</h2>
+        <h2 style="color: black; font-size: xx-large;">Amnaya..........</h2>
         <p class="amnayap" style=" font-size: x-large; letter-spacing: 1px;">
             Your one stop shop for all pooja items and festival essentials. At <b>Amnaya</b>, we understand the importance of tradition and spirituality in your life by delevering happiness to your doorstep.
         </p>
@@ -422,6 +422,7 @@ footer {
     
 </body>
 </html> 
+
 
 
 
